[package]
name = "traits"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-graphql = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

application-utils = { workspace = true }
common-models = { workspace = true }
common-utils = { workspace = true }
database-models = { workspace = true }
database-utils = { workspace = true }
dependent-models = { workspace = true }
enum-models = { workspace = true }
media-models = { workspace = true }
supporting-service = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["tracing"]
