[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { workspace = true }
schematic = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }

[package.metadata.dist]
dist = false

[package.metadata.cargo-machete]
ignored = ["serde_json"]
