[package]
name = "providers"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
convert_case = { workspace = true }
graphql_client = "0.13.0"
hashbag = { workspace = true }
http-types = { workspace = true }
itertools = { workspace = true }
scraper = "0.17.1"
surf = { workspace = true }
surf-governor = "0.2.0"
surf-retry = "0.3.2"
rand = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
rust_iso3166 = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }

[package.metadata.dist]
dist = false
