[package]
name = "rs-utils"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-graphql = { workspace = true }
async-trait = { workspace = true }
aws-sdk-s3 = { workspace = true }
chrono = { workspace = true }
const-str = { workspace = true }
http-types = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
surf = { workspace = true }
uuid = { workspace = true }

[package.metadata.dist]
dist = false
