[package]
name = "migrations-sql"
version = "0.1.0"
edition = "2024"

[dependencies]
indoc = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
tracing = { workspace = true }

enum-models = { workspace = true }
migrations-utils = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["tracing"]
