[package]
name = "background-models"
version = "0.1.0"
edition = "2024"

[dependencies]
apalis-codec = { workspace = true }
apalis-postgres = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
uuid = { workspace = true }

common-models = { workspace = true }
enum-models = { workspace = true }
media-models = { workspace = true }
