[package]
name = "common-models"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { workspace = true }
enum_meta = { workspace = true }
schematic = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
