[package]
name = "common-models"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = { workspace = true }
chrono = { workspace = true }
enum_meta = { workspace = true }
rust_decimal = { workspace = true }
schematic = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }

enum-models = { workspace = true }
