[package]
name = "database_models"
version = "0.1.0"
edition = "2021"

[dependencies]
application_utils = { path = "../../utils/application" }
argon2 = { workspace = true }
async-graphql = { workspace = true }
async-trait = { workspace = true }
boilermates = { workspace = true }
chrono = { workspace = true }
common-models = { path = "../../models/common" }
educe = { version = "=0.6.0", features = ["Debug"], default-features = false }
enums = { path = "../../enums" }
importer_models = { path = "../../models/importer" }
file_storage_service = { path = "../../services/file_storage" }
fitness_models = { path = "../../models/fitness" }
media_models = { path = "../../models/media" }
nanoid = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
schematic = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
user_models = { path = "../../models/user" }
uuid = { workspace = true }
