[package]
name = "dependent-models"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = { workspace = true }
chrono = { workspace = true }
common-models = { path = "../common" }
config = { path = "../../config" }
database-models = { path = "../database" }
enum-models = { path = "../enum" }
importer-models = { path = "../importer" }
media-models = { path = "../media" }
fitness-models = { path = "../fitness" }
rust_decimal = { workspace = true }
schematic = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }
user-models = { path = "../user" }
uuid = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["serde_json"]
