[package]
name = "dependent-models"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
schematic = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }
uuid = { workspace = true }

common-models = { workspace = true }
config-definition = { workspace = true }
database-models = { workspace = true }
enum-models = { workspace = true }
fitness-models = { workspace = true }
importer-models = { workspace = true }
media-models = { workspace = true }
user-models = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["serde_json"]
