[package]
name = "enum-models"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = { workspace = true }
rust_decimal = { workspace = true }
enum_meta = { workspace = true }
schematic = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["serde_json"]
