[package]
name = "fitness-models"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { workspace = true }
common-models = { path = "../../models/common" }
derive_more = { workspace = true }
educe = { workspace = true }
enums = { path = "../../enums" }
rust_decimal = { workspace = true }
schematic = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["serde_json"]
