[package]
name = "fitness-models"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = { workspace = true }
derive_more = { workspace = true }
educe = { workspace = true }
rust_decimal = { workspace = true }
schematic = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }

common-models = { workspace = true }
enum-models = { workspace = true }
media-models = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["serde_json"]
