[package]
name = "importer-models"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

enum-models = { path = "../../models/enum" }

[package.metadata.cargo-machete]
ignored = ["serde_json"]
