[package]
name = "media-models"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = { workspace = true }
boilermates = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
schematic = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }

common-models = { path = "../../models/common" }
common-utils = { path = "../../utils/common" }
enum-models = { path = "../../models/enum" }

[package.metadata.cargo-machete]
ignored = ["serde_json"]
