[package]
name = "user_models"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { workspace = true }
common_models = { path = "../../models/common" }
fitness_models = { path = "../../models/fitness" }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["serde_json"]
