[package]
name = "user-models"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = { workspace = true }
educe = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }

enum-models = { path = "../../models/enum" }
fitness-models = { path = "../../models/fitness" }

[package.metadata.cargo-machete]
ignored = ["serde_json"]
