[package]
name = "anilist-provider"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
convert_case = { workspace = true }
itertools = { workspace = true }
nest_struct = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

application-utils = { workspace = true }
common-models = { path = "../../models/common" }
common-utils = { path = "../../utils/common" }
config-definition = { path = "../../config/definition" }
dependent-models = { path = "../../models/dependent" }
enum-models = { path = "../../models/enum" }
media-models = { path = "../../models/media" }
traits = { path = "../../traits" }

[package.metadata.cargo-machete]
ignored = ["tracing"]
