[package]
name = "anilist-provider"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
convert_case = { workspace = true }
itertools = { workspace = true }
nest_struct = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

common-models = { workspace = true }
common-utils = { workspace = true }
config-definition = { workspace = true }
dependent-models = { workspace = true }
enum-models = { workspace = true }
media-models = { workspace = true }
traits = { workspace = true }
