[package]
name = "giant-bomb-provider"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-graphql = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

application-utils = { workspace = true }
common-models = { workspace = true }
common-utils = { workspace = true }
database-models = { path = "../../models/database" }
dependent-models = { path = "../../models/dependent" }
enum-models = { workspace = true }
media-models = { path = "../../models/media" }
supporting-service = { path = "../../services/supporting" }
traits = { path = "../../traits" }

[package.metadata.cargo-machete]
ignored = ["tracing"]
