[package]
name = "giant-bomb-provider"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-graphql = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

common-models = { workspace = true }
common-utils = { workspace = true }
database-models = { workspace = true }
dependent-models = { workspace = true }
enum-models = { workspace = true }
media-models = { workspace = true }
supporting-service = { workspace = true }
traits = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["tracing"]
