[package]
name = "igdb-provider"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
rust_iso3166 = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
tracing = { workspace = true }

application-utils = { path = "../../utils/application" }
cache-service = { path = "../../services/cache" }
common-models = { path = "../../models/common" }
common-utils = { path = "../../utils/common" }
database-models = { path = "../../models/database" }
dependent-models = { path = "../../models/dependent" }
enum-models = { path = "../../models/enum" }
media-models = { path = "../../models/media" }
supporting-service = { path = "../../services/supporting" }
traits = { path = "../../traits" }

[package.metadata.cargo-machete]
ignored = ["tracing"]
