[package]
name = "igdb-provider"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
rust_iso3166 = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
slug = { workspace = true }
tracing = { workspace = true }

application-utils = { workspace = true }
cache-service = { workspace = true }
common-models = { workspace = true }
common-utils = { workspace = true }
database-models = { workspace = true }
dependent-models = { workspace = true }
enum-models = { workspace = true }
media-models = { workspace = true }
supporting-service = { workspace = true }
traits = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["tracing"]
