[package]
name = "itunes-provider"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
reqwest = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }

common-models = { workspace = true }
common-utils = { workspace = true }
database-models = { workspace = true }
dependent-models = { workspace = true }
enum-models = { workspace = true }
media-models = { workspace = true }
supporting-service = { workspace = true }
traits = { workspace = true }
